syntax = "proto3";
package eventserver;

import "google/protobuf/timestamp.proto";

message Timezone {
  string name = 1;
  sint32 offset = 2; // seconds
}

message Event {
  bytes uuid = 1;
  bytes account = 2;
  string application = 3;
  string type = 4;
  string name = 5;
  string description = 6;
  google.protobuf.Timestamp timestamp = 7;
  Timezone timezone = 8;
  bool real_time = 9;
  google.protobuf.Timestamp synced = 10;
  oneof additional {
    bytes additional_bytes = 11;
    string additional_str = 12;
    string additional_yaml = 13;
  }
}

message ErrorDetails {
  uint32 code = 1;
  string message = 2;
}

message EventStreamItem {
  oneof item_content {
    Event event = 1;
    ErrorDetails error = 2;
    google.protobuf.Timestamp no_more = 3;
  }
}

message EventOperationResult {
  oneof item_content {
    Event event = 1;
    ErrorDetails error = 2;
  }
}

message EventsFilter {
  bytes account = 1;
  string application = 2;
  string type = 3;
  string name = 4;
  google.protobuf.Timestamp since = 5;
}
